; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/extr_osdcore.c_OSDChangeCore.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/extr_osdcore.c_OSDChangeCore.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@OSD = common dso_local global i32* null, align 8
@osdmessages = common dso_local global %struct.TYPE_2__* null, align 8
@OSDMSG_FPS = common dso_local global i64 0, align 8
@OSDMSG_DEBUG = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @OSDChangeCore(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %6 = load i32*, i32** @OSD, align 8
  %7 = icmp ne i32* %6, null
  %8 = zext i1 %7 to i32
  store i32 %8, i32* %3, align 4
  %9 = load %struct.TYPE_2__*, %struct.TYPE_2__** @osdmessages, align 8
  %10 = load i64, i64* @OSDMSG_FPS, align 8
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i64 %10
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  store i32 %13, i32* %4, align 4
  %14 = load %struct.TYPE_2__*, %struct.TYPE_2__** @osdmessages, align 8
  %15 = load i64, i64* @OSDMSG_DEBUG, align 8
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i64 %15
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  store i32 %18, i32* %5, align 4
  %19 = call i32 (...) @OSDDeInit()
  %20 = load i32, i32* %2, align 4
  %21 = call i32 @OSDInit(i32 %20)
  %22 = load i32, i32* %3, align 4
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %24, label %35

24:                                               ; preds = %1
  %25 = load i32, i32* %4, align 4
  %26 = load %struct.TYPE_2__*, %struct.TYPE_2__** @osdmessages, align 8
  %27 = load i64, i64* @OSDMSG_FPS, align 8
  %28 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %26, i64 %27
  %29 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %28, i32 0, i32 0
  store i32 %25, i32* %29, align 4
  %30 = load i32, i32* %5, align 4
  %31 = load %struct.TYPE_2__*, %struct.TYPE_2__** @osdmessages, align 8
  %32 = load i64, i64* @OSDMSG_DEBUG, align 8
  %33 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %31, i64 %32
  %34 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %33, i32 0, i32 0
  store i32 %30, i32* %34, align 4
  br label %35

35:                                               ; preds = %24, %1
  ret i32 0
}

declare dso_local i32 @OSDDeInit(...) #1

declare dso_local i32 @OSDInit(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
